--- a/charts/ai/litellm/templates/config.yaml
+++ b/charts/ai/litellm/templates/config.yaml
@@ -21,19 +21,15 @@ data:
       - model_name: github_copilot/gpt-5
         litellm_params:
           model: github_copilot/gpt-5
-        headers: &copilot_headers
-          editor-version: "vscode/1.103.2"
-          editor-plugin-version: "copilot/1.364.0"
-          Copilot-Integration-Id: "vscode-chat"
-          user-agent: "GithubCopilot/1.364.0"
+          extra_headers: {"Editor-Version": "vscode/1.85.1", "Copilot-Integration-Id": "vscode-chat"}
       - model_name: github_copilot/gpt-5-mini
         litellm_params:
           model: github_copilot/gpt-5-mini
-        headers: *copilot_headers
+          extra_headers: {"Editor-Version": "vscode/1.85.1", "Copilot-Integration-Id": "vscode-chat"}
       - model_name: github_copilot/claude-sonnet-4
         litellm_params:
           model: github_copilot/claude-sonnet-4
-        headers: *copilot_headers
+          extra_headers: {"Editor-Version": "vscode/1.85.1", "Copilot-Integration-Id": "vscode-chat"}
 
     general_settings:
       database_connection_pool_limit: 10 # limit the number of database connections to = MAX Number of DB Connections/Number of instances of litellm proxy (Around 10-20 is good number)
