--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -28,4 +28,6 @@ spec:
         targetRevision: {{ .Values.spec.source.targetRevision }}
         helm:
           valuesObject:
+            spec:
+              {{ .Values.config | toYaml | nindent 14 }}
           {{ .Values.config | toYaml | nindent 12 }}
