--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -29,5 +29,5 @@ spec:
         helm:
           valuesObject:
             spec:
-              {{ .Values.config | toYaml | nindent 14 }}
+              {{ .Values.spec | toYaml | nindent 14 }}
           {{ .Values.config | toYaml | nindent 12 }}
