--- a/roles/ai/templates/openwebui.yaml
+++ b/roles/ai/templates/openwebui.yaml
@@ -16,7 +16,7 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
       valuesObject:
-{{- with .Values.config }}
+{{- with .Values }}
   {{. | toYaml | nindent 10 }}
 {{- end }}
   syncPolicy:
