--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: cluster-roles
+  name: {{ .Release.Name }}-roles
 spec:
   ignoreApplicationDifferences:
     - jsonPointers:
