--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -15,7 +15,7 @@ spec:
 {{- end }}
   template:
     metadata:
-      name: '{{ "{{" }} .Release.Name {{ "}}" }}-{{ "{{" }} .name {{ "}}" }}'
+      name: '{{ .Release.Name }}-roles-{{ "{{" }} .name {{ "}}" }}'
       namespace: "openshift-gitops"
     spec:
       project: default
