--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -3,13 +3,16 @@ cluster:
   name: openshift
   admin_email: admin@example.com
   timezone: America/New_York
+  #storage:
+  #  config:
+  #    storageClassName: synology-iscsi
 
 application:
   name: LiteLLM
   group: AI/ML
   icon: subtitles
   iconColor: ""
-  image: 'https://raw.githubusercontent.com/BerriAI/litellm/refs/heads/main/docs/my-website/img/favicon.png'
+  image: "https://raw.githubusercontent.com/BerriAI/litellm/refs/heads/main/docs/my-website/img/favicon.png"
   description: "Unified API to manage and deploy LLMs"
   port: 4000
   location: 0
