--- a/charts/media/gaps/values.yaml
+++ b/charts/media/gaps/values.yaml
@@ -3,25 +3,23 @@ cluster:
   name: openshift
   admin_email: admin@example.com
   timezone: America/New_York
+  storage:
+    #config:
+    #  storageClassName: synology-iscsi
+    media:
+      nfs:
+        server: nas
+        path: /volume1/media
 
 application:
   name: Gaps
   group: Media
   icon: movie-open
   iconColor: ""
-  image: 'https://raw.githubusercontent.com/JasonHHouse/gaps/master/images/Final-Black.png'
+  image: "https://raw.githubusercontent.com/JasonHHouse/gaps/master/images/Final-Black.png"
   description: "Helps find missing movies in a series"
   port: 8484
   location: 0
-
-storage:
-  config:
-    storageClassName: synology-iscsi
-    path: /usr/data
-  media:
-    nfs:
-      server: nas
-      path: /volume1/media
 
 pods:
   main:
