--- a/charts/ai/litellm/templates/db-pvc.yaml
+++ b/charts/ai/litellm/templates/db-pvc.yaml
@@ -9,3 +9,6 @@ spec:
   resources:
     requests:
       storage: 300Gi
+{{- if .Values.cluster.storage.config.storageClass }}
+  storageClassName: {{ .Values.cluster.storage.config.storageClass }}
+{{- end }}
