--- a/roles/media/Chart.yaml
+++ b/roles/media/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-description: A Helm chart for the ai role
-name: cluster
+description: A Helm chart for the media role
+name: media
 version: 1.0.0
 kubeVersion: ">=1.22.0-0"
 
