--- a/cluster/values.yaml
+++ b/cluster/values.yaml
@@ -7,13 +7,9 @@ spec:
 
 roles:
   - ai
+  - utilities
 
-config:
-  cluster:
-    top_level_domain: example.com
-    name: cluster
-    admin_email: YOUR_EMAIL
-    timezone: YOUR_TIMEZONE
-    storage:
-      config:
-        storageClassName: synology-iscsi
+configSecret:
+  name: cluster-config
+  namespace: openshift-gitops
+  valuesKey: config.yaml
