fix: yeah, that didnt work..
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -30,8 +30,4 @@ spec:
           valuesObject:
             spec:
               {{ .Values.spec | toYaml | nindent 14 }}
-          valuesFrom:
-            - kind: Secret
-              name: {{ default (printf "%s-config" .Release.Name) .Values.configSecret.name }}
-              valuesKey: {{ default "config.yaml" .Values.configSecret.valuesKey }}
-              targetPath: config
+          {{ .Values.config | toYaml | nindent 12 }}
