--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -30,3 +30,4 @@ spec:
           valuesObject:
             spec:
 {{ .Values.spec | toYaml | nindent 14 }}
+{{ .Values.config | toYaml | nindent 12 }}
