feat: change roles to be enabled true/false
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -10,8 +10,10 @@ spec:
   generators:
     - list:
         elements:
-{{- range .Values.roles }}
-        - name: {{ . }}
+{{- range $name, $config := .Values.roles }}
+{{- if $config.enabled }}
+        - name: {{ $name }}
+{{- end }}
 {{- end }}
   template:
     metadata:
