--- a/roles/media/templates/gaps.yaml
+++ b/roles/media/templates/gaps.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bazarr
+  name: gaps
   namespace: openshift-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: bazarr
+    namespace: gaps
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/media/bazarr
+    path: charts/media/gaps
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
@@ -20,5 +20,8 @@ spec:
   {{. | toYaml | nindent 10 }}
 {{- end }}
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
