feat: auto-sync
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/ai/templates/litellm.yaml
+++ b/roles/ai/templates/litellm.yaml
@@ -20,5 +20,8 @@ spec:
   {{. | toYaml | nindent 10 }}
 {{- end }}
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
