--- a/charts/ai/open-webui/Chart.yaml
+++ b/charts/ai/open-webui/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 description: A Helm chart for Open WebUI
-name: openwebui
+name: open-webui
 version: 1.0.0
 kubeVersion: ">=1.22.0-0"
 
