--- a/charts/ai/open-webui/templates/pvc.yaml
+++ b/charts/ai/open-webui/templates/pvc.yaml
@@ -9,7 +9,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.openWebUI.persistence.size }}
+      storage: {{ .Values.openwebui.persistence.size }}
 {{- if .Values.cluster.storage.config.storageClass }}
   storageClassName: {{ .Values.cluster.storage.config.storageClass }}
 {{- end }}
