--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
     "recommendations": [
-        "davidanson.vscode-markdownlint"
+        "davidanson.vscode-markdownlint",
+        "gaspardruan.taboutx",
+        "fcrespo82.markdown-table-formatter",
+        "mikestead.dotenv",
+        "editorconfig.editorconfig",
     ]
 }
