feat: add python to auto-approve commands in VSCode settings
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
     "cd": true,
     "make": true,
     "python3": true,
+    "python": true,
     "find": true,
     "git commit": false,
     "git": true,
