--- a/charts/media/radarr/values.yaml
+++ b/charts/media/radarr/values.yaml
@@ -12,26 +12,25 @@ cluster:
         path: /volume1/media
 
 application:
-  name: Sonarr
+  name: Radarr
   group: Media
-  icon: simple-icons:sonarr
+  icon: simple-icons:radarr
   iconColor: ""
-  image: "https://raw.githubusercontent.com/Sonarr/Sonarr/v5-develop/Logo/256.png"
-  description: "TV Series management"
-  port: 8989
+  image: "https://raw.githubusercontent.com/Radarr/Radarr/v5.18.0/Logo/256.png"
+  description: "Movie management"
+  port: 7878
   location: 0
 
 pods:
   main:
     image:
       # renovate custom-docker versioning=semver
-      repository: ghcr.io/home-operations/sonarr
-      tag: 4.0.15
+      repository: ghcr.io/home-operations/radarr
+      tag: 5.18.0
       pullPolicy: IfNotPresent
     env:
       TZ: "{{ .Values.cluster.timezone }}"
-      COMPlus_EnableDiagnostics: "0"
-      SONARR__APP__INSTANCENAME: Sonarr
-      SONARR__AUTH__METHOD: External
-      SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
-      SONARR__LOG__LEVEL: info
+      RADARR__INSTANCE_NAME: Radarr
+      RADARR__PORT: "{{ .Values.application.port }}"
+      RADARR__APPLICATION_URL: "https://radarr.{{ .Values.cluster.top_level_domain }}"
+      RADARR__LOG_LEVEL: info
