feat: Add comprehensive documentation and configuration for OpenShift cluster management
- Introduced `.github/copilot-instructions.md` for GitOps-managed Kubernetes home cluster operations.
- Added `.prettierignore` to exclude Helm template files and sensitive files from formatting.
- Updated VS Code configuration in `.vscode/extensions.json` and `.vscode/settings.json` to support Helm templates.
- Created `.yamllint` configuration to enforce YAML best practices while ignoring Helm templates.
- Modified Helm chart templates to use `storageClassName` consistently and added timezone environment variable to applications.
- Updated route configurations in various Helm charts to ensure proper syntax and formatting.
- Added `vscode-helm-config.md` documentation for VS Code settings specific to Helm template handling.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,11 @@
 {
-    "recommendations": [
-        "davidanson.vscode-markdownlint",
-        "gaspardruan.taboutx",
-        "fcrespo82.markdown-table-formatter",
-        "mikestead.dotenv",
-        "editorconfig.editorconfig",
-    ]
+  "recommendations": [
+    "davidanson.vscode-markdownlint",
+    "gaspardruan.taboutx",
+    "fcrespo82.markdown-table-formatter",
+    "mikestead.dotenv",
+    "editorconfig.editorconfig",
+    "ms-kubernetes-tools.vscode-kubernetes-tools",
+    "tim-koehler.helm-intellisense"
+  ]
 }
