--- a/charts/ai/litellm/templates/app-config-pvc.yaml
+++ b/charts/ai/litellm/templates/app-config-pvc.yaml
@@ -11,6 +11,6 @@ spec:
   resources:
     requests:
       storage: 1Gi
-{{- if .Values.cluster.storage.config.storageClass }}
-  storageClassName: {{ .Values.cluster.storage.config.storageClass }}
+{{- if .Values.cluster.storage.config.storageClassName }}
+  storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
