--- a/charts/ai/ollama/templates/pvc.yaml
+++ b/charts/ai/ollama/templates/pvc.yaml
@@ -12,6 +12,6 @@ spec:
   resources:
     requests:
       storage: {{ .Values.ollama.persistence.size }}
-{{- if .Values.cluster.storage.config.storageClass }}
-  storageClassName: {{ .Values.cluster.storage.config.storageClass }}
+{{- if .Values.cluster.storage.config.storageClassName }}
+  storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
