--- a/charts/ai/open-webui/templates/route.yaml
+++ b/charts/ai/open-webui/templates/route.yaml
@@ -6,7 +6,7 @@ metadata:
     route.openshift.io/termination: "edge"
   name: {{ .Release.Name }}
 spec:
-  host: {{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  host: "{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
   path: /
   to:
     kind: Service
