--- a/charts/media/bazarr/values.yaml
+++ b/charts/media/bazarr/values.yaml
@@ -29,5 +29,4 @@ pods:
       tag: 1.5.2
       pullPolicy: IfNotPresent
     env:
-      TZ: America/New_York
-      test: two
+      TZ: "{{ .Values.cluster.timezone }}"
