--- a/charts/utilities/excalidraw/values.yaml
+++ b/charts/utilities/excalidraw/values.yaml
@@ -29,4 +29,4 @@ pods:
       tag: 0.18.0
       pullPolicy: IfNotPresent
     env:
-      TZ: America/New_York
+      TZ: "{{ .Values.cluster.timezone }}"
