feat: Update volume mounts for Radarr and Sonarr to include specific media paths
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/radarr/templates/statefulset.yaml
+++ b/charts/media/radarr/templates/statefulset.yaml
@@ -50,8 +50,12 @@ spec:
           volumeMounts:
           - mountPath: /config
             name: config
-          - mountPath: /data
+          - mountPath: /data/media/movies
             name: data
+            subPath: media/movies
+          - mountPath: /data/usenet/complete
+            name: data
+            subPath: usenet/complete
       volumes:
         - name: config
           persistentVolumeClaim:
