feat: Disable automated pruning and self-healing for ArgoCD applications for the development phase
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/ai/templates/litellm.yaml
+++ b/roles/ai/templates/litellm.yaml
@@ -21,7 +21,7 @@ spec:
 {{- end }}
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
