--- a/roles/ai/templates/open-webui.yaml
+++ b/roles/ai/templates/open-webui.yaml
@@ -21,7 +21,7 @@ spec:
 {{- end }}
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
