--- a/roles/media/templates/kapowarr.yaml
+++ b/roles/media/templates/kapowarr.yaml
@@ -1,20 +1,20 @@
-{{ if .Values.applications.bazarr }}
+{{ if ! .Values.applications.kapowarr }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bazarr
+  name: kapowarr
   namespace: openshift-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: bazarr
-    server: {{ .Values.spec.destination.server }}
+    namespace: kapowarr
+    server: "{{ .Values.spec.destination.server }}"
   project: default
   source:
-    path: charts/media/bazarr
-    repoURL: {{ .Values.spec.source.repoURL }}
-    targetRevision: {{ .Values.spec.source.targetRevision }}
+    path: charts/media/kapowarr
+    repoURL: "{{ .Values.spec.source.repoURL }}"
+    targetRevision: "{{ .Values.spec.source.targetRevision }}"
     helm:
       valuesObject:
 {{- with .Values }}
