--- a/roles/media/templates/sonarr.yaml
+++ b/roles/media/templates/sonarr.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.applications.sonarr }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -25,3 +26,4 @@ spec:
       selfHeal: false
     syncOptions:
       - CreateNamespace=true
+{{ end }}
