fix: Correct conditional syntax for Kapowarr application check
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/media/templates/kapowarr.yaml
+++ b/roles/media/templates/kapowarr.yaml
@@ -1,4 +1,4 @@
-{{ if ! .Values.applications.kapowarr }}
+{{ if not .Values.applications.kapowarr }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
