feat: Add NFS configuration for media storage in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/values.yaml
+++ b/cluster/values.yaml
@@ -22,3 +22,7 @@ config:
     storage:
       config:
         storageClassName: synology-iscsi
+      media:
+        nfs:
+          server: nas
+          path: /volume1/media
