fix: Update mountPath for media books in StatefulSet configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/kapowarr/templates/statefulset.yaml
+++ b/charts/media/kapowarr/templates/statefulset.yaml
@@ -50,7 +50,7 @@ spec:
           volumeMounts:
           - mountPath: /app/db
             name: config
-          - mountPath: /data/media/books
+          - mountPath: /data/media/books/comics
             name: data
             subPath: media/books
           - mountPath: /data/downloads/comics
