fix: Update subPath for downloads in StatefulSet configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/kapowarr/templates/statefulset.yaml
+++ b/charts/media/kapowarr/templates/statefulset.yaml
@@ -55,7 +55,7 @@ spec:
             subPath: media/books
           - mountPath: /data/downloads/comics
             name: data
-            subPath: usenet/complete
+            subPath: downloads/comics
       volumes:
         - name: config
           persistentVolumeClaim:
