--- a/charts/media/gaps/templates/links.yaml
+++ b/charts/media/gaps/templates/links.yaml
@@ -1,3 +1,4 @@
+{{- if .Capabilities.APIVersions.Has "console.openshift.io/v1" }}
 ---
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
@@ -22,6 +23,7 @@ spec:
     section: {{ .Values.application.group | quote }}
     imageURL: {{ .Values.application.image | quote }}
   text: {{ .Values.application.name | quote }}
+{{- end }}
 {{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha1" }}
 ---
 apiVersion: startpunkt.ullberg.us/v1alpha1
