--- a/charts/ai/litellm/templates/securitycontextconstraints.yaml
+++ b/charts/ai/litellm/templates/securitycontextconstraints.yaml
@@ -1,3 +1,4 @@
+{{- if .Capabilities.APIVersions.Has "security.openshift.io/v1" }}
 ---
 kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
@@ -12,4 +13,5 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}
+  - system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}
+{{- end }}
