--- a/charts/ai/open-webui/templates/route.yaml
+++ b/charts/ai/open-webui/templates/route.yaml
@@ -1,3 +1,4 @@
+{{- if .Capabilities.APIVersions.Has "route.openshift.io/v1" }}
 ---
 kind: Route
 apiVersion: route.openshift.io/v1
@@ -18,3 +19,4 @@ spec:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
+{{- end }}
