fix: Add conditional checks for storageClassName in PVC templates
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,8 @@
     "git commit": false,
     "git": true,
     "wc": true,
-    "mv": true
+    "mv": true,
+    "helm template": true
   },
   "yaml.schemas": {
     "https://www.schemastore.org/yamllint.json": [
