--- a/charts/ai/litellm/templates/app-config-pvc.yaml
+++ b/charts/ai/litellm/templates/app-config-pvc.yaml
@@ -11,6 +11,6 @@ spec:
   resources:
     requests:
       storage: 1Gi
-{{- if .Values.cluster.storage.config.storageClassName }}
+{{- if and .Values.cluster.storage .Values.cluster.storage.config .Values.cluster.storage.config.storageClassName }}
   storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
