--- a/charts/ai/litellm/templates/db-pvc.yaml
+++ b/charts/ai/litellm/templates/db-pvc.yaml
@@ -9,6 +9,6 @@ spec:
   resources:
     requests:
       storage: 300Gi
-{{- if .Values.cluster.storage.config.storageClassName }}
+{{- if and .Values.cluster.storage .Values.cluster.storage.config .Values.cluster.storage.config.storageClassName }}
   storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
