--- a/charts/ai/open-webui/templates/pvc.yaml
+++ b/charts/ai/open-webui/templates/pvc.yaml
@@ -10,6 +10,6 @@ spec:
   resources:
     requests:
       storage: {{ .Values.openwebui.persistence.size }}
-{{- if .Values.cluster.storage.config.storageClassName }}
+{{- if and .Values.cluster.storage .Values.cluster.storage.config .Values.cluster.storage.config.storageClassName }}
   storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
