fix: Add ignoreDifferences for syncPolicy in roles.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -20,6 +20,9 @@ spec:
       name: '{{ .Release.Name }}-roles-{{ "{{" }} .name {{ "}}" }}'
       namespace: "openshift-gitops"
     spec:
+      ignoreDifferences:
+      - jsonPointers:
+        - /spec/syncPolicy
       project: default
       destination:
         server: {{ .Values.spec.destination.server }}
