fix: Update syncPolicy to enable pruning and self-healing for multiple applications
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/media/templates/bazarr.yaml
+++ b/roles/media/templates/bazarr.yaml
@@ -22,8 +22,8 @@ spec:
 {{- end }}
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
 {{ end }}
