--- a/roles/ai/templates/ollama.yaml
+++ b/roles/ai/templates/ollama.yaml
@@ -21,7 +21,7 @@ spec:
 {{- end }}
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
