--- a/roles/media/templates/gaps.yaml
+++ b/roles/media/templates/gaps.yaml
@@ -22,8 +22,8 @@ spec:
 {{- end }}
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
 {{ end }}
