--- a/charts/media/gaps/templates/statefulset.yaml
+++ b/charts/media/gaps/templates/statefulset.yaml
@@ -40,6 +40,8 @@ spec:
         - 65535
       containers:
         - env:
+          - name: TZ
+            value: {{ .Values.cluster.timezone }}
           {{ range $key, $value := .Values.pods.main.env }}- name: {{ $key }}
             value: {{ $value }}
           {{ end }}
