feat: Add labels to PersistentVolumeClaim templates for better resource identification
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
     "git": true,
     "wc": true,
     "mv": true,
-    "helm template": true
+    "helm template": true,
+    "grep": true
   },
   "yaml.schemas": {
     "https://www.schemastore.org/yamllint.json": [
