--- a/charts/media/radarr/templates/config-volume.yaml
+++ b/charts/media/radarr/templates/config-volume.yaml
@@ -2,7 +2,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ .Release.Name }}-config"
+  name: {{ .Release.Name }}-config
+  labels:
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   accessModes:
     - ReadWriteOnce
