--- a/charts/media/sonarr/templates/config-volume.yaml
+++ b/charts/media/sonarr/templates/config-volume.yaml
@@ -2,7 +2,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ .Release.Name }}-config"
+  name: {{ .Release.Name }}-config
+  labels:
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -10,5 +13,5 @@ spec:
     requests:
       storage: 15Gi
 {{- if and .Values.cluster.storage .Values.cluster.storage.config .Values.cluster.storage.config.storageClassName }}
-  storageClassName: "{{ .Values.cluster.storage.config.storageClassName }}"
+  storageClassName: {{ .Values.cluster.storage.config.storageClassName }}
 {{- end }}
