feat: Add helm and validate taskfiles for comprehensive chart validation and linting
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -7,6 +7,8 @@ shopt: [globstar]
 
 includes:
   git: .taskfiles/git
+  helm: .taskfiles/helm
+  validate: .taskfiles/validate
 
 tasks:
   default: task --list
