fix: Simplify volume mounts in StatefulSet templates for media applications
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/kapowarr/templates/statefulset.yaml
+++ b/charts/media/kapowarr/templates/statefulset.yaml
@@ -52,12 +52,8 @@ spec:
           volumeMounts:
           - mountPath: /app/db
             name: config
-          - mountPath: /data/media/books/comics
+          - mountPath: /data
             name: data
-            subPath: media/books
-          - mountPath: /data/downloads/comics
-            name: data
-            subPath: downloads/comics
       volumes:
         - name: config
           persistentVolumeClaim:
