--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
         "gaspardruan.taboutx",
         "fcrespo82.markdown-table-formatter",
         "mikestead.dotenv",
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        "task.vscode-task"
       ]
     }
   }
