feat: Add Helm chart and Kubernetes resources for Prowlarr application
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/media/values.yaml
+++ b/roles/media/values.yaml
@@ -4,6 +4,7 @@ applications:
   kavita: false
   readarr: false
   kapowarr: false
+  prowlarr: false
   sonarr: false
   radarr: false
   bazarr: false
