--- a/.taskfiles/helm/Taskfile.yaml
+++ b/.taskfiles/helm/Taskfile.yaml
@@ -87,11 +87,44 @@ tasks:
         done
       - echo "✅ All helm charts linted successfully!"
 
-  validate-all:
-    desc: Run both validation and linting on all charts
+  validate-icons:
+    desc: Validate icon fields in helm charts (offline)
     summary: |
-      Comprehensive validation that runs both helm template validation
-      and helm lint on all charts.
+      Validates icon fields in values.yaml files, checks format consistency,
+      and suggests defaults for missing icons based on application type.
+      This performs offline validation only.
+    silent: true
+    cmds:
+      - chmod +x scripts/validate-icons.sh
+      - scripts/validate-icons.sh
+
+  validate-icons-online:
+    desc: Validate icon fields in helm charts with online verification
+    summary: |
+      Validates icon fields in values.yaml files, checks format consistency,
+      suggests defaults for missing icons, and verifies icons exist in the
+      Iconify database by making API calls.
+    silent: true
+    cmds:
+      - chmod +x scripts/validate-icons.sh
+      - scripts/validate-icons.sh --online
+
+  validate-all:
+    desc: Run all validation tasks on helm charts (offline)
+    summary: |
+      Comprehensive validation that runs helm template validation,
+      helm lint, and offline icon validation on all charts.
     cmds:
       - task: validation
       - task: lint
+      - task: validate-icons
+
+  validate-all-online:
+    desc: Run all validation tasks on helm charts with online verification
+    summary: |
+      Comprehensive validation that runs helm template validation,
+      helm lint, and online icon validation on all charts.
+    cmds:
+      - task: validation
+      - task: lint
+      - task: validate-icons-online
