--- a/.taskfiles/validate/Taskfile.yaml
+++ b/.taskfiles/validate/Taskfile.yaml
@@ -4,15 +4,27 @@ version: "3"
 
 tasks:
   all:
-    desc: Run all validation tasks
+    desc: Run all validation tasks (offline)
     summary: |
       Comprehensive validation suite that runs all available validation tasks
-      including helm chart validation and linting. This task serves as the
-      entry point for all validation workflows.
+      including helm chart validation, linting, and offline icon validation.
+      This task serves as the entry point for all validation workflows.
     cmds:
       - echo "🚀 Running all validation tasks..."
       - task: adr
       - task: :helm:validate-all
+      - echo "✅ All validation tasks completed successfully!"
+
+  all-online:
+    desc: Run all validation tasks with online verification
+    summary: |
+      Comprehensive validation suite that runs all available validation tasks
+      including helm chart validation, linting, and online icon validation
+      against the Iconify database.
+    cmds:
+      - echo "🚀 Running all validation tasks (online mode)..."
+      - task: adr
+      - task: :helm:validate-all-online
       - echo "✅ All validation tasks completed successfully!"
 
   helm:
